flask_app.log
  File "/app/app.py", line 1377
    ```
    ^
SyntaxError: invalid syntax
